--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 body {
   margin: 0;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   background-color: black;
+  color: white;
 }
 
 * {
   box-sizing: border-box;
 }
 
+a {
+  font: inherit;
+  color: inherit;
+  text-decoration: none;
+  text-decoration: underline;
+}
