--- a/src/pages/Collection/style.css
+++ b/src/pages/Collection/style.css
@@ -1,4 +1,6 @@
 .columns {
+  padding: 2em;
+  padding-left: 350px;
   display: flex;
   gap: 1em;
 }
@@ -14,7 +16,7 @@
   cursor: pointer;
   overflow: hidden;
   width: 100%;
-  transition: 0.2s;
+  transition: 0.4s;
 }
 
 img {
