--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,14 +1,10 @@
-.controls-container {
+.sidebar-container {
   position: relative;
   display: grid;
   padding: 15px;
-  /* padding-top: 50px; */
   gap: 15px;
   z-index: 1;
   height: fit-content;
-  max-width: 100%;
-}
-
-.controls-container * {
+  width: 400px;
   white-space: nowrap;
 }
