--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,10 +1,10 @@
 .sidebar-container {
-  position: relative;
   display: grid;
   padding: 15px;
   gap: 15px;
   z-index: 1;
   height: fit-content;
-  width: 400px;
+  width: 350px;
+  min-width: 350px;
   white-space: nowrap;
 }
