--- a/src/pages/Collection/style.css
+++ b/src/pages/Collection/style.css
@@ -1,15 +1,7 @@
 .collection-container {
-  display: flex;
-  gap: 1em;
   height: 100vh;
-}
-
-.collection-columns {
-  width: 100%;
-  padding: 15px;
+  width: 100vw;
   display: flex;
-  gap: 15px;
-  overflow-y: scroll;
 }
 
 @media (max-width: 1000px) {
@@ -20,6 +12,14 @@
   .collection-container {
     height: fit-content;
   }
+}
+
+.collection-columns {
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  gap: 15px;
+  overflow-y: scroll;
 }
 
 .collection-column {
