--- a/src/pages/Collection/style.css
+++ b/src/pages/Collection/style.css
@@ -42,10 +42,14 @@
   object-fit: contain;
   width: 100%;
   height: 100%;
-  transition: 2s ease-out;
+  /* filter: grayscale(0); */
+  /* transition: all 0.2s ease-out; */
 }
 
-.collection-image-container:hover > img {
+/* .collection-image-container:hover img {
   transform: scale(1.05);
-  /* transform: rotate(1deg) scale(1.03); */
-}
+} */
+
+/* .collection-image-container img:not(:hover) {
+  filter: grayscale(0.7) brightness(0.7);
+} */
