Made some changes

--- a/src/components/Columns/style.css
+++ b/src/components/Columns/style.css
@@ -1,15 +1,15 @@
 .collection-columns {
   width: 100%;
-  padding: 15px;
+  padding: 25px;
   display: flex;
-  gap: 15px;
+  gap: 25px;
   overflow-y: scroll;
 }
 
 .collection-column {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 25px;
   width: 100%;
   height: fit-content;
 }
@@ -25,4 +25,8 @@
 .collection-image-container img {
   object-fit: contain;
   width: 100%;
+}
+
+.video {
+  border: 5px rgb(84, 185, 6) solid;
 }
