--- a/src/pages/Content/style.css
+++ b/src/pages/Content/style.css
@@ -2,6 +2,7 @@
   height: 100vh;
   width: 100vw;
   display: flex;
+  overflow: hidden;
 }
 
 @media (max-width: 1000px) {
@@ -12,28 +13,62 @@
 
 .content-image-container {
   position: relative;
-  height: calc(100vh - 30px);
   width: 100%;
+  height: (100vh - 50px);
+  margin: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 7px;
   overflow: hidden;
-  margin: 15px;
+  /* background-color: palevioletred; */
 }
 
-.content-image-container img {
+.content-image-container .image {
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.content-image-container .background,
+.mouse-follower {
   position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  overflow: hidden;
-}
-
-.content-image-container .content-image {
   z-index: 1;
-  object-fit: contain;
+  transform: scale(1.05);
+  pointer-events: none;
 }
 
-.content-image-container .content-image-background {
-  z-index: 0;
+.content-image-container .background {
   object-fit: cover;
   filter: blur(10px) brightness(0.4);
+  animation: move 30s ease-in-out infinite alternate;
+}
+
+@keyframes move {
+  0% {
+    transform: scale(1.5) rotate(15deg);
+  }
+  50% {
+    transform: scale(1.05) rotate(0);
+  }
+  100% {
+    transform: scale(1.5) rotate(-15deg);
+  }
+}
+
+.mouse-follower {
+  z-index: 3;
+  opacity: 0;
+  object-fit: contain;
+  /* filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.5)); */
+}
+
+.content-image-container:hover .mouse-follower {
+  opacity: 1;
 }
