--- a/src/pages/Exhibit/style.css
+++ b/src/pages/Exhibit/style.css
@@ -11,10 +11,13 @@
   background-color: #eee;
 }
 
-.exhibit-box {
+.dot {
   position: absolute;
-  background-color: #ffae00;
-  width: 100%;
-  height: 100%;
-  inset: (0% 45% 0% 45% round 10px)
+  width: 2px;
+  height: 2px;
+  background-color: white;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
